src/test/ui/unnecessary-extern-crate.stderr
error: unused extern crate
  --> $DIR/unnecessary-extern-crate.rs:16:1
   |
LL | extern crate libc;
   | ^^^^^^^^^^^^^^^^^^ help: remove it
   |
note: lint level defined here
  --> $DIR/unnecessary-extern-crate.rs:13:9
   |
LL | #![deny(unused_extern_crates)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unused extern crate
  --> $DIR/unnecessary-extern-crate.rs:19:1
   |
LL | extern crate libc as x;
   | ^^^^^^^^^^^^^^^^^^^^^^^ help: remove it

error: unused extern crate
  --> $DIR/unnecessary-extern-crate.rs:41:5
   |
LL |     extern crate libc;
   |     ^^^^^^^^^^^^^^^^^^ help: remove it

error: unused extern crate
  --> $DIR/unnecessary-extern-crate.rs:45:5
   |
LL |     extern crate libc as x;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ help: remove it

error: unused extern crate
  --> $DIR/unnecessary-extern-crate.rs:54:9
   |
LL |         extern crate libc;
   |         ^^^^^^^^^^^^^^^^^^ help: remove it

error: unused extern crate
  --> $DIR/unnecessary-extern-crate.rs:58:9
   |
LL |         extern crate libc as x;
   |         ^^^^^^^^^^^^^^^^^^^^^^^ help: remove it

error: aborting due to 6 previous errors

